Enhance product management features; add ProductStatus enum, update Product and ProductDetail entities, and improve indexing service for better performance