@@ -13,65 +13,50 @@ import org.typesense.model.Field;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class ProductSchemaServiceImpl implements ProductSchemaService {
     private static final Logger log = LoggerFactory.getLogger(ProductSchemaServiceImpl.class);
     private static final int MAX_RETRIES = 3;
-    private static final long RETRY_DELAY_MS = 2000;
 
     @Override
     public void createProductSchema(Client typesenseClient) {
-        try (ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor()) {
-            Runnable task = new Runnable() {
-                private int attempt = 1;
+        try {
+            int attempt = 1; // Example value for the current attempt
+            log.info("Attempting to retrieve existing collections (Attempt {}/{})...", attempt, MAX_RETRIES);
+            List<CollectionResponse> collections = List.of(typesenseClient.collections().retrieve());
+            log.info("Found collections: {}", collections);
 
-                @Override
-                public void run() {
-                    try {
-                        log.info("Attempting to retrieve existing collections (Attempt {}/{})...", attempt, MAX_RETRIES);
-                        List<CollectionResponse> collections = List.of(typesenseClient.collections().retrieve());
-                        log.info("Found collections: {}", collections);
+            if (collections.stream().noneMatch(c -> c.getName().equals("product"))) {
+                log.info("Creating 'product' collection...");
+                typesenseClient.collections().create(new CollectionSchema()
+                        .name("product")
+                        .fields(Arrays.asList(
+                                new Field().name("productId").type(FieldTypes.INT64).facet(false),
+                                new Field().name("name").type(FieldTypes.STRING).facet(false),
+                                new Field().name("productDescription").type(FieldTypes.STRING).facet(false),
+                                new Field().name("price").type(FieldTypes.FLOAT).facet(true),
+                                new Field().name("minPrice").type(FieldTypes.FLOAT).facet(true),
+                                new Field().name("maxPrice").type(FieldTypes.FLOAT).facet(true),
+                                new Field().name("category").type(FieldTypes.STRING).facet(true),
+                                new Field().name("stockLevel").type(FieldTypes.INT32).facet(false),
+                                new Field().name("brand").type(FieldTypes.STRING).facet(true),
+                                new Field().name("availability").type(FieldTypes.STRING).facet(true),
+                                new Field().name("features").type(FieldTypes.STRING).facet(false),
+                                new Field().name("image").type(FieldTypes.STRING).facet(false)
+                        )));
+                log.info("Product collection created successfully");
+            } else {
+                log.info("Product collection already exists");
+            }
 
-                        if (collections.stream().noneMatch(c -> c.getName().equals("product"))) {
-                            log.info("Creating 'product' collection...");
-                            typesenseClient.collections().create(new CollectionSchema()
-                                    .name("product")
-                                    .fields(Arrays.asList(
-                                            new Field().name("productId").type(FieldTypes.INT64).facet(false),
-                                            new Field().name("name").type(FieldTypes.STRING).facet(false),
-                                            new Field().name("productDescription").type(FieldTypes.STRING).facet(false),
-                                            new Field().name("price").type(FieldTypes.FLOAT).facet(true),
-                                            new Field().name("minPrice").type(FieldTypes.FLOAT).facet(true),
-                                            new Field().name("maxPrice").type(FieldTypes.FLOAT).facet(true),
-                                            new Field().name("category").type(FieldTypes.STRING).facet(true),
-                                            new Field().name("stockLevel").type(FieldTypes.INT32).facet(false),
-                                            new Field().name("brand").type(FieldTypes.STRING).facet(true),
-                                            new Field().name("availability").type(FieldTypes.STRING).facet(true),
-                                            new Field().name("features").type(FieldTypes.STRING).facet(false),
-                                            new Field().name("slug").type(FieldTypes.STRING).facet(false)
-                                    )));
-                            log.info("Product collection created successfully");
-                        } else {
-                            log.info("Product collection already exists");
-                        }
-                        scheduler.shutdown();
-                    } catch (Exception e) {
-                        log.error("Attempt {}/{} failed to create product collection", attempt, MAX_RETRIES, e);
-                        if (attempt++ >= MAX_RETRIES) {
-                            scheduler.shutdown();
-                            throw new RuntimeException("Failed to create Typesense collection after " + MAX_RETRIES + " attempts", e);
-                        }
-                    }
-                }
-            };
-
-            scheduler.scheduleWithFixedDelay(task, 0, RETRY_DELAY_MS, TimeUnit.MILLISECONDS);
+        } catch (Exception e) {
+            log.error("Attempt {}/{} failed to create product collection", MAX_RETRIES, e);
         }
     }
+};
 
-}
+
+
+
